Muting in paint brush is not working #41761

Closed
opened 2014-09-09 17:41:57 +02:00 by Cenek Strichel · 10 comments

System Information
W8.1 64. GF250

Blender Version
8837bb2

Short description of error
If you mute node in Painting brush, it is still used.

desatur.png

paint.blend

**System Information** W8.1 64. GF250 **Blender Version** 8837bb2 **Short description of error** If you mute node in Painting brush, it is still used. ![desatur.png](https://archive.blender.org/developer/F109646/desatur.png) [paint.blend](https://archive.blender.org/developer/F109648/paint.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-09-09 19:26:35 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Antony, we support tex nodes for brushes???

Antony, we support tex nodes for brushes???

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

From brief discussion with @LukasTonne looks like it has been disabled explicitly for texture nodes.

From brief discussion with @LukasTonne looks like it has been disabled explicitly for texture nodes.

Yes, this is so, see node_texture_tree.c line 144. I need a test for the bug that caused this code to be disabled to make sure that enabling this won't break anything here.

Yes, this is so, see node_texture_tree.c line 144. I need a test for the bug that caused this code to be disabled to make sure that enabling this won't break anything here.

This issue was referenced by 59a38ccc42

This issue was referenced by 59a38ccc4239a407e8954abd2250a68540a84e59

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 59a38ccc42.

Closed by commit 59a38ccc42.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41761
No description provided.