Fix T41761, muting not working with texture nodes

This was disabled to fix T41349, however seems that if we don't pass
delegates for muted nodes everything work fine.